# serverx-rs

./: Cargo.toml  rustfmt.toml
codegen/: .gitignore  main.py
codegen/biomes/: biomes.py
codegen/blocks/: blocks.py  properties.py  state.py
codegen/data/: biomes.json
codegen/templates/biomes/: biomes.rs.j2
codegen/templates/blocks/: blocks.rs.j2  properties.rs.j2  states.rs.j2
core/: Cargo.toml
core/benches/: ecs_benchmark.rs
core/src/: lib.rs
core/src/collections/: bit_vec.rs  mod.rs  packed_vec.rs
core/src/collections/pallet/: mod.rs
core/src/ecs/: access.rs  archetype.rs  component.rs  entity.rs  mod.rs  sort.rs  system.rs  tuple.rs  types.rs  world.rs
core/src/ecs/storage/: archetype.rs  blob.rs  component.rs  mod.rs  sync_unsafe_cell.rs
core/src/ecs/tuple/: mod.rs  ptr.rs  type_tuple.rs
core/src/nbt/: decode.rs  encode.rs  io.rs  mod.rs  tag.rs
core/src/protocol/: decode.rs  encode.rs  io.rs  mod.rs  packet.rs  types.rs
core/src/protocol/v765/: clientbound.rs  mod.rs  serverbound.rs  types.rs
core/src/utils/: identifier.rs
crates/benches/: Cargo.toml
crates/benches/benches/: benchmark.rs
crates/benches/src/: lib.rs
crates/benches/src/bvh/: hyperion.rs  mod.rs
crates/benches/src/ecs/: common.rs  mod.rs  pipeline.rs  push.rs  random.rs  system.rs
crates/benches/src/ecs/evenio/: common.rs  mod.rs  push.rs  random.rs  system.rs
crates/benches/src/misc/: btree.rs  mod.rs  sorted.rs
crates/block/: Cargo.toml
crates/block/src/: blocks.rs  lib.rs  properties.rs  states.rs
crates/bvh/: Cargo.toml
crates/bvh/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: identifier.rs  lib.rs
crates/common/src/collections/: bit_vec.rs  packed_vec.rs
crates/common/src/collections/pallet/: mod.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: archetype.rs  component.rs  entity.rs  event.rs  handler.rs  lib.rs  message.rs  registry.rs  sort.rs  system.rs  util.rs  world.rs
crates/ecs/src/execution/: handler.rs  iter.rs  mod.rs  pipeline.rs  run.rs
crates/ecs/src/registry/: access.rs  mod.rs
crates/ecs/src/storage/: archetype.rs  channel.rs  column.rs  event.rs  mod.rs  table.rs
crates/ecs/src/tuple/: borrow.rs  component.rs  message.rs  mod.rs  ptr.rs  table.rs  type_tuple.rs  value.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/game/src/chunk/: loader.rs  mod.rs  store.rs
crates/game/src/chunk/generators/: flat.rs  mod.rs
crates/hyperion_bvh/: Cargo.toml
crates/hyperion_bvh/src/: aabb.rs  lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: ecs_pipeline.rs  ecs_tuple.rs  identifier.rs  lib.rs  nbt.rs  packet.rs  proto.rs  tuple.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: decode.rs  encode.rs  io.rs  tag.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: chunk.rs  decode.rs  encode.rs  io.rs  lib.rs  packet.rs  types.rs
crates/protocol/src/v765/: clientbound.rs  mod.rs  serverbound.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  resources.rs  server.rs
crates/server/src/client/: mod.rs  status.rs  sync.rs  update.rs
crates/server/src/network/: accept.rs  brand.rs  event.rs  listen.rs  mod.rs
crates/server/src/network/handlers/: handshake.rs  login.rs  status.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  position.rs
crates/world/src/biome/: mod.rs
crates/world/src/chunk/: height.rs  mod.rs  section.rs
crates/world/src/lighting/: mod.rs
dumper/: build.gradle  gradle.properties
dumper/src/main/java/com/clientx/: DataDumper.java  ServerListener.java
dumper/src/main/java/com/clientx/dumpers/: BiomeDumper.java  BlockDumper.java  Dumper.java  (+1 more)
dumper/src/main/resources/: datadumper.mixins.json  fabric.mod.json
macros/src/: ecs.rs  identifier.rs  lib.rs  nbt.rs
run/: config.toml
server/: Cargo.toml
server/src/: main.rs  resources.rs  server.rs
server/src/client/: mod.rs  profile.rs  state.rs
server/src/network/: accept.rs  brand.rs  connection.rs  event.rs  listen.rs  mod.rs
server/src/network/handlers/: handshake.rs  login.rs  status.rs
slab/: Cargo.toml
