[package]
name = "serverx-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "1.7.0"
itertools = "0.12.1"
rand = "0.9.0-alpha.0"
serde_derive = "1.0.197"
serde = "1.0.197"
either = "1.10.0"
serde_json = "1.0.114"
aes = "0.8.4"
cfb8 = "0.8.1"
tokio = { version = "1.36.0", features = ["full"] }
slab = "0.4.9"
smallvec = "1.13.1"
serverx-macros = { path = "../macros" }
hashbrown = "0.12.3"
atomic_refcell = "0.1.13"
rayon = "1.9.0"