[package]
name = "serverx-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = "1.36.0"
flume = "0.11.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
toml = "0.7.8"
serverx-slab = { path = "../slab" }
serverx-macros = { path = "../macros" }
serverx-core = { path = "../core" }
uuid = { version = "1.7.0", features = ["v4"] }
enum_dispatch = "0.3.12"