[package]
name = "serverx-game"
version = "0.1.0"
edition = "2021"

[dependencies]
serverx-ecs = { path = "../ecs" }
serverx-world = { path = "../world" }
serverx-block = { path = "../block" }
serverx-common = { path = "../common" }
rayon = "1.10.0"
hashbrown = "0.14.3"
crossbeam = "0.8.4"
num-integer = "0.1.46"
slab = "0.4.9"
