[package]
name = "serverx-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = "1.36.0"
flume = "0.11.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
parking_lot = "0.12.1"
toml = "0.7.8"
slab = "0.4.9"
rayon = "1.9.0"
uuid = { version = "1.7.0", features = ["v4"] }
enum_dispatch = "0.3.12"
hashbrown = "0.14.3"
smallvec = "1.13.1"

serverx-macros = { path = "../macros" }
serverx-protocol = { path = "../protocol" }
serverx-common = { path = "../common" }
serverx-nbt = { path = "../nbt" }